# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "napari-guitils"
description = "Utils to create napari guis"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "guillaume.witz@unibe.ch", name = "Guillaume Witz" },
]
dynamic = ["version"]
dependencies = []

[tool.hatch.version]
path = "napari_guitils/__init__.py"

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/guiwitz/napari-guitils"
repository = "https://github.com/guiwitz/napari-guitils"
